Add pylint support

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,3 +24,6 @@ check_untyped_defs = True
 disallow_untyped_decorators = True
 strict_optional = False
 warn_no_return = False
+
+[pylint]
+disable = E0611, C0114, C0115, C0116, C0103, W0125, C0330
