--- a/setup.cfg
+++ b/setup.cfg
@@ -26,4 +26,4 @@ strict_optional = False
 warn_no_return = False
 
 [pylint]
-disable = E0611, C0114, C0115, C0116, C0103, W0125, C0330
+disable = E0611, C0114, C0115, C0116, W0125, C0330, C0103
